Fix for checkboxes on Firefox

--- a/packages/wc-compass/src/components/checkbox/_checkbox.scss
+++ b/packages/wc-compass/src/components/checkbox/_checkbox.scss
@@ -49,24 +49,6 @@
     outline: 2px solid var(--blue60);
   }
 
-  &[checked] {
-    &::before {
-      background-color: var(--accent);
-      background-repeat: no-repeat;
-      background-position: center;
-      border-color: var(--accent);
-    }
-    &::after {
-      width: 8px;
-      height: 4px;
-      border-left: 2px solid #ffffff;
-      border-bottom: 2px solid #ffffff;
-      left: 7px;
-      top: 8px;
-      transform: rotate(-45deg);
-    }
-  }
-
   &:has(input[type='checkbox']:checked) {
     &::before {
       background-color: var(--accent);
@@ -100,12 +82,6 @@
     }
   }
 
-  &[disabled] {
-    color: var(--disabled-color);
-    &::before {
-      border-color: currentColor;
-    }
-  }
   &:has(input[type='checkbox']:disabled) {
     color: var(--disabled-color);
     &::before {
@@ -117,6 +93,55 @@
   &:has(input[type='checkbox']:disabled:checked) {
     &::before {
       background-color: currentColor;
+    }
+  }
+}
+
+// For Firefox
+.cdg-checkbox {
+  &[checked] {
+    &::before {
+      background-color: var(--accent);
+      background-repeat: no-repeat;
+      background-position: center;
+      border-color: var(--accent);
+    }
+    &::after {
+      width: 8px;
+      height: 4px;
+      border-left: 2px solid #ffffff;
+      border-bottom: 2px solid #ffffff;
+      left: 7px;
+      top: 8px;
+      transform: rotate(-45deg);
+    }
+  }
+
+  &[indeterminate] {
+    &::before {
+      background-color: var(--accent);
+      border-color: var(--accent);
+    }
+
+    &::after {
+      width: 0.65rem;
+      height: 2px;
+      background: #ffffff;
+      top: 11px;
+      left: 7px;
+    }
+  }
+
+  &[disabled] {
+    color: var(--disabled-color);
+    &::before {
+      border-color: currentColor;
+    }
+    &[checked],
+    &[indeterminate] {
+      &::before {
+        background-color: currentColor;
+      }
     }
   }
 }
